--- a/Pecan/MainWindow.xaml
+++ b/Pecan/MainWindow.xaml
@@ -14,9 +14,10 @@
         Background="Transparent"
         >
 
+    <!-- Equivalent to ViewModel instantiation on code behind
     <Window.DataContext>
         <vm:NavigationVM />
-    </Window.DataContext>
+    </Window.DataContext> -->
 
     <Grid>
         
@@ -32,7 +33,7 @@
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="228" />
-                    <ColumnDefinition Width="672" />
+                    <ColumnDefinition Width="872" />
                 </Grid.ColumnDefinitions>
 
                 <!-- Sidebar Nav -->
@@ -143,8 +144,8 @@
                     <Grid.RowDefinitions>
                         <!--Control Buttons-->
                         <RowDefinition Height="25"/>
-                        <!--Caption-->
-                        <RowDefinition Height="35" />
+                        <!--Caption
+                        <RowDefinition Height="35" />-->
                         <!--Child views-->
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
@@ -165,7 +166,7 @@
                         </Button>
                     </StackPanel>
 
-                    <!--Caption / Title-->
+                    <!--Caption / Title
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -184,13 +185,13 @@
                                        VerticalAlignment="Center"/>
                         </StackPanel>
                         
-                    </Grid>
+                    </Grid>-->
                     
                     <!--Child Views-->
                     <ContentControl x:Name="Pages"
                                 Content="{Binding CurrentView}" 
                                 Grid.Row="2"   
-                                Margin="25"/>
+                                Margin="25,25,10,25"/>
 
                 </Grid>
 
