--- a/Pecan/Views/SearchProductWindow.xaml
+++ b/Pecan/Views/SearchProductWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pecan.Views"
         mc:Ignorable="d"
-        Title="Buscar producto" Height="450" Width="500">
+        Title="Buscar producto" Height="550" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="5*" />
+            <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
@@ -17,17 +18,24 @@
             <TextBlock Text="Nombre:" VerticalAlignment="Center" />
             <TextBox Width="300" Margin="20,0,0,0" Height="25" />
         </StackPanel>
+        
         <ListView Grid.Row="1" Margin="10" BorderBrush="#CDCDCD" Padding="0" >
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Id" Width="45" />
-                    <GridViewColumn Header="Cod Barra" Width="75"/>
-                    <GridViewColumn Header="Nombre" Width="175"/>
-                    <GridViewColumn Header="Pre. Uni." Width="75"/>
-                    <GridViewColumn Header="Proveedor" Width="105"/>
+                    <GridViewColumn Header="Codigo" Width="125"/>
+                    <GridViewColumn Header="Nombre" Width="225"/>
+                    <GridViewColumn Header="Pre. Uni." Width="125"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Grid.Row="2" Content="Agregar" Height="25" Width="150"  />
+        
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="10">
+            <TextBlock Text="Cantidad:" VerticalAlignment="Center" />
+            <TextBox Width="100" Height="25" Margin="15,0,0,0" />
+            <TextBlock Text="Subtotal:" VerticalAlignment="Center" Margin="15,0,0,0" />
+            <TextBox Width="100" Height="25" Margin="15,0,0,0" />
+        </StackPanel>
+        
+        <Button Grid.Row="3" Content="Agregar" Height="25" Width="150"  />
     </Grid>
 </Window>
