--- a/Pecan/Views/SuppliersView.xaml
+++ b/Pecan/Views/SuppliersView.xaml
@@ -5,8 +5,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pecan.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        
-    </Grid>
+             d:DesignHeight="790" d:DesignWidth="872" 
+             FontSize="24" Foreground="White" FontFamily="Montserrat" FontWeight="Medium"
+             Background="{StaticResource darkOliveBrush}">
+    <StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
+            <TextBlock Text="Nombre Proveedor" />
+            <TextBox Margin="28,0,0,0" Width="300" CaretBrush="LightGray" 
+                     BorderBrush="DarkGray" BorderThickness="0,0,0,3" Background="{StaticResource darkTomBrush}"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
+            <TextBlock Text="Telefono" />
+            <TextBox Margin="142,0,0,0" Width="300" CaretBrush="LightGray" 
+                     BorderBrush="DarkGray" BorderThickness="0,0,0,3" Background="{StaticResource darkTomBrush}"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
+
+            <TextBlock Text="Domicilio" />
+            <TextBox Margin="131,0,0,0" Width="300" CaretBrush="LightGray" 
+                     BorderBrush="DarkGray" BorderThickness="0,0,0,3" Background="{StaticResource darkTomBrush}"/>
+        </StackPanel>
+        <Button HorizontalAlignment="Center" Width="200" Height="40" Margin="0,15,0,0"
+                Foreground="White" 
+                Background="{StaticResource tomBrush}" Content="Agregar" />
+    </StackPanel>
 </UserControl>
