--- a/Pecan/Views/ProductsView.xaml
+++ b/Pecan/Views/ProductsView.xaml
@@ -14,7 +14,8 @@
             <TextBox x:Name="txtProducto" FontFamily="Montserrat" FontSize="24"
                    FontWeight="Medium" Foreground="White" CaretBrush="LightGray" 
                    BorderBrush="DarkGray" BorderThickness="0,0,0,3"  Width="300"
-                   Background="{StaticResource darkTomBrush}" Margin="78,0,0,0" />
+                   Background="{StaticResource darkTomBrush}" Margin="78,0,0,0"
+                     Text="{Binding Name}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
             <TextBlock Text="Codigo barra" FontFamily="Montserrat" FontSize="24"
@@ -22,7 +23,8 @@
             <TextBox x:Name="txtCodigo" FontFamily="Montserrat" FontSize="24"
                    FontWeight="Medium" Foreground="White" CaretBrush="LightGray"
                    BorderBrush="DarkGray" BorderThickness="0,0,0,3" Width="300"
-                   Background="{StaticResource darkTomBrush}" Margin="25,0,0,0"  />
+                   Background="{StaticResource darkTomBrush}" Margin="25,0,0,0" 
+                   Text="{Binding Barcode}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
             <TextBlock Text="Buscar proveedor" FontFamily="Montserrat" FontSize="24"
@@ -31,7 +33,8 @@
                    FontSize="24" FontWeight="Medium" Foreground="White"
                    CaretBrush="LightGray" BorderBrush="DarkGray"
                    BorderThickness="0,0,0,3"  Width="300"
-                   Background="{StaticResource darkTomBrush}" Margin="25,0,0,0" />
+                   Background="{StaticResource darkTomBrush}" Margin="25,0,0,0"
+                     Text="{Binding SupplierName}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
             <TextBlock Text="Precio compra" FontFamily="Montserrat" FontSize="24"
@@ -39,7 +42,8 @@
             <TextBox x:Name="txtCantidad" FontFamily="Montserrat" FontSize="24"
                    FontWeight="Medium" Foreground="White" CaretBrush="LightGray"
                    BorderBrush="DarkGray" BorderThickness="0,0,0,3" Width="140"
-                   Background="{StaticResource darkTomBrush}" Margin="20,0,0,0" />
+                   Background="{StaticResource darkTomBrush}" Margin="20,0,0,0" 
+                     Text="{Binding BuyPrice}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="30,25,10,0">
             <TextBlock Text="Precio venta" FontFamily="Montserrat" FontSize="24"
@@ -47,7 +51,8 @@
             <TextBox x:Name="txtSubtotal" FontFamily="Montserrat" FontSize="24"
                    FontWeight="Medium" Foreground="White" CaretBrush="LightGray"
                    BorderBrush="DarkGray" BorderThickness="0,0,0,3" Width="140"
-                   Background="{StaticResource darkTomBrush}" Margin="42,0,0,0" />
+                   Background="{StaticResource darkTomBrush}" Margin="42,0,0,0" 
+                     Text="{Binding SalePrice}"/>
             <Button x:Name="btnSugerir" Content="Sugerir precio" Width="200"
                     Height="35" Margin="20,0,0,0" FontSize="24" FontWeight="Medium"
                     Foreground="White" Background="{StaticResource tomBrush}" />
