--- a/Pecan/Views/SalesView.xaml
+++ b/Pecan/Views/SalesView.xaml
@@ -58,10 +58,10 @@
         <!-- Add button -->
         <Button Grid.Row="1" HorizontalAlignment="Left" Width="250" Height="40" Margin="30,25,0,10"
                 FontSize="24"  FontWeight="Medium"  Foreground="White" 
-                Background="{StaticResource tomBrush}"  Content="Agregar producto" />
+                Background="{StaticResource tomBrush}"  Content="Agregar producto" Command="{Binding}"/>
         
         <!-- Product List -->
-        <ListView Grid.Row="2" Margin="5,5,5,5" FontSize="20">
+        <ListView Grid.Row="2" Margin="5,5,5,5" FontSize="20" ItemsSource="{Binding SaleItems}">
             <ListView.View>
                 <GridView>
                     <GridView.ColumnHeaderContainerStyle>
@@ -69,11 +69,46 @@
                             <Setter Property="IsEnabled" Value="False" />
                         </Style>                        
                     </GridView.ColumnHeaderContainerStyle>
-                    <GridViewColumn Header="Cod" Width="270" />
-                    <GridViewColumn Header="Nombre" Width="292" />
-                    <GridViewColumn Header="Cant" Width="100" />
-                    <GridViewColumn Header="Precio" Width="100" />
-                    <GridViewColumn Header="Subtot" />
+                    
+                    <GridViewColumn Header="Cod" Width="270" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock HorizontalAlignment="Center" Text="{Binding Barcode}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>    
+                    </GridViewColumn>
+
+                    <GridViewColumn Header="Nombre" Width="292" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock HorizontalAlignment="Center" Text="{Binding Product}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                    <GridViewColumn Header="Cant" Width="100" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock HorizontalAlignment="Center" Text="{Binding QuantityOfProducts}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                    <GridViewColumn Header="Precio" Width="100" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock HorizontalAlignment="Center" Text="{Binding Price}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                    <GridViewColumn Header="Subtot" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock HorizontalAlignment="Center" Text="{Binding Subtotal}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -81,7 +116,7 @@
         <!-- Add button -->
         <Button Grid.Row="3" HorizontalAlignment="Center" Width="250" Height="60" Margin="0,15,0,10"
                 FontSize="24"  FontWeight="Medium"  Foreground="White" 
-                Background="{StaticResource tomBrush}"  Content="Confirmar Venta" />
+                Background="{StaticResource tomBrush}"  Content="Confirmar Venta" Command="{Binding}" />
 
     </Grid>
 </UserControl>
